Default pulte logo covers the right side ifp area if the floorplan is not loadd. No longer stretches over.

--- a/UI/projects/homedesigner/src/app/modules/home/components/home/home.component.scss
+++ b/UI/projects/homedesigner/src/app/modules/home/components/home/home.component.scss
@@ -16,6 +16,11 @@
 	}
 }
 
+.phd-ifp-logo-image {
+	width: calc(45vw);
+	height: calc(65vh);
+}
+
 .phd-floor-plan-image {
 	padding-left: calc(13vw);
 	padding-right: calc(13vw);
