--- a/UI/projects/homedesigner/src/app/modules/shared/components/floor-plan/floor-plan.component.scss
+++ b/UI/projects/homedesigner/src/app/modules/shared/components/floor-plan/floor-plan.component.scss
@@ -1,9 +1,3 @@
-.phd-default-ifp {
-	width: calc(20vw);
-	height: calc(46vh);
-	margin-top: 20px;
-}
-
 .phd-ifp {
 	margin: auto;
 	padding-top: 30px;
